# books

./: .gitignore  README.md
Data-Structures-and-Algorithms/: CMakeLists.txt
Data-Structures-and-Algorithms/bit_algorithms/: CMakeLists.txt  bital.hpp  main.cpp
Data-Structures-and-Algorithms/dynamic_programming/: CMakeLists.txt  dyp.hpp  main.cpp
Data-Structures-and-Algorithms/geeksforgeeks/: CMakeLists.txt  backtracking.hpp  main.cpp  permutation.hpp
Data-Structures-and-Algorithms/graph/DFS/: CMakeLists.txt  dfs.cpp  dfs.hpp  main.cpp
boost.asio/: CMakeLists.txt
boost.asio/boost-good-example/fastest-way-read-file/: CMakeLists.txt  main.cpp
boost.asio/boostorg/allocation/: CMakelists.txt  server.cpp
boost.asio/boostorg/beast/: CMakeLists.txt  http_client_async_ssl.cpp  http_client_sync_ssl.cpp  http_server_async.cpp  http_server_async_ssl.cpp  http_server_sync.cpp  http_server_sync_ssl.cpp  http_sync_client.cpp  websocket_sync_client.cpp
boost.asio/boostorg/buffer/: CMakelists.txt  reference_counted.cpp
boost.asio/boostorg/chat/: CMakelists.txt  chat_client.hpp  chat_message.hpp  chat_server.hpp  main.cpp
boost.asio/boostorg/echo/: CMakeLists.txt  async_tcp_echo_server.cpp  async_udp_echo_server.cpp  blocking_tcp_echo_client.cpp  blocking_tcp_echo_server.cpp  blocking_udp_echo_client.cpp  blocking_udp_echo_server.cpp
boost.asio/boostorg/futures/: CMakeLists.txt  daytime_client.cpp
boost.asio/boostorg/httpserver/: CMakeLists.txt  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  header.hpp  main.cpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
boost.asio/boostorg/multicast/: CMakeLists.txt  receiver.cpp  sender.cpp
boost.asio/boostorg/nonblocking/: CMakeLists.txt  third_party_lib.cpp
boost.asio/boostorg/spawn/: CMakeLists.txt  echo_server.cpp
boost.asio/boostorg/ssl/: CMakeLists.txt  README.MD  client.cpp  dh2048.pem  server.cpp  server.crt  server.csr  server.key
boost.asio/boostorg/timeouts/: CMakeLists.txt  async_tcp_client.cpp  blocking_tcp_client.cpp  blocking_token_tcp_client.cpp  blocking_udp_client.cpp  server.cpp
boost.asio/boostorg/timer/: CMakeLists.txt  time_t_timer.cpp
boost.asio/boostorg/tracking/: CMakeLists.txt  async_tcp_echo_server.cpp  custom_tracking.hpp
boost.asio/boostorg/unix_domain_socket/: CMakeLists.txt  connect_pair.cpp
boost.asio/chapter01/accept-connection/: CMakeLists.txt  main.cpp
boost.asio/chapter01/active-socket/: CMakeLists.txt  main.cpp  udp.cpp
boost.asio/chapter01/connecting-socket/: CMakeLists.txt  main.cpp
boost.asio/chapter01/connecting-socket2/: CMakeLists.txt  main.cpp
boost.asio/chapter01/create-endpoint/: CMakeLists.txt  build.bat  server.cpp
boost.asio/chapter01/example01/: CMakeLists.txt  client.cpp  server.cpp
boost.asio/chapter01/passive-socket/: CMakeLists.txt  main.cpp
boost.asio/chapter01/resolving-DNS/: CMakeLists.txt  main.cpp
boost.asio/chapter01/socket-endpoint/: CMakeLists.txt  main.cpp
boost.asio/chapter02/: CMakeLists.txt  main.cpp  sync_client.cpp  sync_client.hpp  sync_server.cpp  sync_server.hpp
boost.asio/chapter03/: AsyncTcpClient.cpp  AsyncTcpClient.hpp  CMakeLists.txt  SyncTCPClient.cpp  SyncTCPClient.hpp  SyncTCPServer.cpp  SyncTCPServer.hpp  SyncUDFClient.cpp  SyncUDPClient.hpp  TcpSection.hpp  main.cpp
boost.asio/chapter04/: CMakeLists.txt  async_server.hpp  main.cpp  service.hpp  sync_parallel_tcp.hpp
boost.asio/chapter05/: CMakeLists.txt  cert.pem  http_client.hpp  http_errors.hpp  http_server.hpp  key.pem  main.cpp  sync_ssl_client.hpp  sync_ssl_server.hpp
boost.asio/network-programming/: CMakeLists.txt  main.cpp  started_asio.hpp  tcp.hpp
boost.asio/network-programming/client-server/: CMakeLists.txt  acceptor.cpp  acceptor.hpp  client_connection.cpp  client_connection.hpp  client_get_http.cpp  client_get_http.hpp  connection.cpp  connection.hpp  define.hpp  echo_server_acceptor.cpp  echo_server_acceptor.hpp  echo_server_connection.cpp  echo_server_connection.hpp  echoserver.cpp  echoserver.hpp  hive.cpp  hive.hpp  logger.hpp  main.cpp
grpc/: CMakeLists.txt
grpc/cmake/: common.cmake
grpc/hello-world/: CMakeLists.txt  build.bat  greeter_client.cpp  greeter_server.cpp  helloworld.proto
protobuf/address-book/: CMakeLists.txt  address_book.cpp
protobuf/proto2/: CMakeLists.txt  defining_service.pb.cc  defining_service.pb.h  defining_service.proto  gen.bat  result.pb.cc  result.pb.h  result.proto
zeromq/: CMakeLists.txt
zeromq/1-basic/hello-world/: CMakeLists.txt  client.cpp  simple_client.cpp
zeromq/1-basic/parallel-task/: CMakeLists.txt  tasksink.cpp  taskwork.cpp
zeromq/1-basic/weather-station/: CMakeLists.txt  wuclient.cpp  wuproxy.cpp
zeromq/2-socket-and-pattern/handling-interrupt-signals/: CMakeLists.txt  tasksink2.cpp  taskwork2.cpp
zeromq/2-socket-and-pattern/multiple-sockets/: CMakeLists.txt
zeromq/2-socket-and-pattern/multithreading/: CMakeLists.txt  mtserver.cpp
zeromq/2-socket-and-pattern/node-coordination/: CMakeLists.txt  run.bat  syncpub.cpp  syncsub.cpp
zeromq/2-socket-and-pattern/pub-sub-message-envelope/: CMakeLists.txt  psenvpub.cpp  psenvsub.cpp
zeromq/2-socket-and-pattern/router-dealer/: CMakeLists.txt  rrclient.cpp  rrworker.cpp
zeromq/2-socket-and-pattern/signal-between-thread/: CMakeLists.txt  mtreply.cpp
zeromq/3-advanced-request-reply-patterns/asynchronous/: CMakeLists.txt  asyncsrv.cpp
zeromq/3-advanced-request-reply-patterns/identity/: CMakeLists.txt  identity.cpp
zeromq/3-advanced-request-reply-patterns/inter-broker-routing/: CMakeLists.txt  peering1.cpp  peering2_client.cpp  peering2_server.cpp
zeromq/3-advanced-request-reply-patterns/load-balancing-pattern/: CMakeLists.txt  ibbroker.cpp  rtdel.cpp  rtreq.cpp
zeromq/4. Reliable Request-Reply Patterns/4.1 Lazy Pirate Pattern/: CMakelists.txt  lpclient.cpp  (+5 more)
zeromq/8-A Framework for Distributed Computing/: CMakeLists.txt  dechat.cpp  udplib.cpp  udpping1.cpp  udpping2.cpp
(+110 files in other folders)
